# kgforge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: docs.yml  publish-to-pypi.yml
docs/kgforge/: index.html  pdftokg.html
kgforge/: __init__.py  pdftokg.py
kgforge/config/: __init__.py  config.py
kgforge/data_models/: __init__.py  data_models.py
kgforge/documents/: __init__.py  document.py
kgforge/kg/: __init__.py  kg_construct.py
kgforge/utils/: __init__.py  openalex_util.py  pdfreader.py
tests/: test_nlp.py  test_pdftokg.py
tests/test_data/: single_graph.json  test_graph.json
