[tool.poetry]
name = "kgforge"
version = "0.2.11"
description = "Library to automate extraction of scientific knowledge and generate knowledge graphs out of them."
authors = ["Harish Varma Siravuri <harish.siravuri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
transformers = "^4.34.0"
pytest = "^7.4.2"
pypdf2 = "^3.0.1"
pdfminer = "^20191125"
matplotlib = "^3.8.0"
pydantic = "^2.4.2"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
